# GebeyaERP

./: README.md  license.txt  pyproject.toml  requirements.txt
.claude/: settings.local.json
docs/: admin_guide.md  qa_checklist.md  user_guide.md
gebeyaerp/: hooks.py  install.py  modules.txt
gebeyaerp/fixtures/: custom_field.json  customer.json  print_format.json  property_setter.json
gebeyaerp/gebeyaerp/doctype/daily_summary/: daily_summary.json  daily_summary.py  test_daily_summary.py
gebeyaerp/gebeyaerp/doctype/pulsecheck_report/: pulsecheck_report.json  pulsecheck_report.py  test_pulsecheck_report.py
gebeyaerp/gebeyaerp/doctype/shop_settings/: shop_settings.json  shop_settings.py  test_shop_settings.py
gebeyaerp/gebeyaerp/page/gebeya_dashboard/: gebeya_dashboard.js  gebeya_dashboard.json
gebeyaerp/gebeyaerp/page/pulsecheck/: pulsecheck.js  pulsecheck.json
gebeyaerp/gebeyaerp/report/gebeya_customer_summary/: gebeya_customer_summary.json  gebeya_customer_summary.py
gebeyaerp/gebeyaerp/setup/setup_wizard/: setup_wizard.py
gebeyaerp/public/js/: attendance.js  customer.js  customer_list.js  employee.js  item.js  purchase_receipt.js  sales_invoice.js
gebeyaerp/services/: customer.py  daily_summary.py  dashboard.py  hr.py  pulsecheck.py  pulsecheck_ai.py  pulsecheck_kpis.py
gebeyaerp/tests/: test_pulsecheck_kpis.py
gebeyaerp/utils/: __init__.py
